--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 		<artifactId>log4j</artifactId>
 		<version>1.2.17</version>
 	</dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-reload4j</artifactId>
+      <version>1.7.36</version>
+    </dependency>
   </dependencies>
 
   <build>
