--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
       <artifactId>slf4j-reload4j</artifactId>
       <version>1.7.36</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.11.0</version>
+    </dependency>
   </dependencies>
 
   <build>
